Here are some changes that i have made after changing the branch

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Sathvik is a prodigy.....</h1>
+    <h1>I am Heading ..</h1>
+    <p>Hi , I am a paragraph ..</p>
 </body>
 </html>
